# brasileirao

./: LICENSE  README.md  pyproject.toml
data/: brasileirao_2014_2024.csv  brasileirao_2014_2024_clean.csv  brasileirao_2015_2024.csv
notebooks/: 01_data_extraction.ipynb  02_data_cleaning.ipynb  03_analise_arbitros.ipynb  03_analise_exploratoria.ipynb  03_feature_engineering_EDA.ipynb  04_analise_publico.ipynb  analise_brasileirao.ipynb
